@@ -1,7 +1,7 @@
 source ENV['GEM_SOURCE'] || 'https://rubygems.org'
 
 group :unit_tests do
-  gem 'rubocop', '0.34.2',                                :require => false
+  gem 'rubocop',                                          :require => false
   gem 'puppetlabs_spec_helper',                           :require => false
   gem 'rspec-puppet-facts',                               :require => false
   gem 'metadata-json-lint',                               :require => false
@@ -20,18 +20,6 @@ group :unit_tests do
   gem 'puppet-lint-trailing_comma-check',                 :require => false
   gem 'puppet-lint-version_comparison-check',             :require => false
   gem 'puppet-lint-appends-check',                        :require => false
-end
-
-group :development do
-  gem 'simplecov',        :require => false
-  # gem 'guard-rake',       :require => false
-  gem 'librarian-puppet', :require => false
-end
-
-group :system_tests do
-  # gem 'vagrant-wrapper', :require => false
-  gem 'beaker-rspec',    :require => false
-  gem 'serverspec',      :require => false
 end
 
 if (facterversion = ENV['FACTER_GEM_VERSION'])
