@@ -1,6 +1,6 @@
 {
   "name": "puppet-adcli",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "Aaron Johnson",
   "summary": "Install adcli package and Join Active Directory using adcli",
   "license": "GPL-3.0+",
