@@ -1,2 +1,4 @@
+2017-09-30 (0.0.2)
+        * Puppet 4x fixes
 2016-07-07 (0.0.1)
 	* First release
